Display progression in 3 steps while recalculating scores

--- a/src/org/mfcrawler/resources/MessagesBundle.properties
+++ b/src/org/mfcrawler/resources/MessagesBundle.properties
@@ -63,7 +63,9 @@ loading.loadProject=Loading Project :
 loading.deleteProject=Deleting Project :
 loading.closing=Closing
 loading.reblacklistSites=Reblacklist all websites
-loading.recalculateScores=Recalculate scores
+loading.recalculateScores.step1=Recalculate scores : 1/3
+loading.recalculateScores.step2=Recalculate scores : 2/3
+loading.recalculateScores.step3=Recalculate scores : 3/3
 loading.clearProject=Clear database of current project
 
 crawlThread.wait=Waiting
