Set version v0.8 in the properties file

--- a/src/org/mfcrawler/resources/MessagesBundle.properties
+++ b/src/org/mfcrawler/resources/MessagesBundle.properties
@@ -1,5 +1,5 @@
 window.title=Mini Focused Crawler
-window.about=Mini Focused Crawler\nCopyright (C) 2013  lbertelo\nGNU General Public License v3
+window.about=Mini Focused Crawler v0.8\nCopyright (C) 2013  lbertelo\nGNU General Public License v3
 window.closingWarning=The crawl must be stopped before closing the application
 general.ok=OK
 general.cancel=Cancel
