--- a/src/org/mfcrawler/resources/MessagesBundle.properties
+++ b/src/org/mfcrawler/resources/MessagesBundle.properties
@@ -67,6 +67,7 @@ loading.recalculateScores.step1=Recalculate scores : 1/3
 loading.recalculateScores.step2=Recalculate scores : 2/3
 loading.recalculateScores.step3=Recalculate scores : 3/3
 loading.clearProject=Clear database of current project
+loading.export=Export results to a file
 
 crawlThread.wait=Waiting
 crawlThread.load=Loading page : 
