Correct and improve Internalization in PageDetailPanel and SiteDetailPanel

--- a/src/org/mfcrawler/resources/MessagesBundle.properties
+++ b/src/org/mfcrawler/resources/MessagesBundle.properties
@@ -136,6 +136,13 @@ overview.index=Index
 overview.index.refreshMenu=Refresh Menu
 overview.index.root=Domains
 overview.detail=Detail
+overview.detail.incomingDomains=incoming Domains
+overview.detail.outgoingDomains=outgoing Domains
+overview.detail.recrawl=Recrawl
+overview.detail.tab.main=Main
+overview.detail.tab.links=Links
+overview.detail.tab.content=Content
+overview.detail.tab.analysis=Analysis
 overview.refreshDetail.display=Display pages :
 overview.refreshDetail.crawled=crawled and ok
 overview.refreshDetail.error=error
@@ -159,7 +166,6 @@ overview.pageDetail.crawlError=crawl error
 overview.pageDetail.resume=resume
 overview.pageDetail.links=links
 overview.pageDetail.linkNonCrawled= (non-crawled)
-overview.pageDetail.recrawl=Recrawl
 overview.pageDetail.recrawlDialog=Are you sure you want to recrawl the page?
 overview.siteDetail.domain=domain
 overview.siteDetail.minOuterDeep=outer Deep
@@ -171,7 +177,4 @@ overview.siteDetail.robotCrawlDelay=crawl delay (robots.txt)
 overview.siteDetail.robotCrawlDisallowPath=disallow path (robots.txt)
 overview.siteDetail.blacklist=Blacklist
 overview.siteDetail.blacklistDialog=Are you sure you want to blacklist the site?
-overview.siteDetail.recrawl=Recrawl
 overview.siteDetail.recrawlDialog=Are you sure you want to recrawl all the pages?
-overview.siteDetail.incomingDomains=incoming Domains
-overview.siteDetail.outgoingDomains=outgoing Domains
