Display allow and disallow path from robots.txt in site detail panel and start to add analysis tab which analyze content of a site or a page

--- a/src/org/mfcrawler/resources/MessagesBundle.properties
+++ b/src/org/mfcrawler/resources/MessagesBundle.properties
@@ -14,6 +14,8 @@ general.refresh=Refresh
 general.load=Load
 general.undefined=Undefined
 general.theProject=The project
+general.robotPath.allow=allow : 
+general.robotPath.disallow=disallow :
 
 dialog.error=Error
 dialog.warning=Warning
@@ -136,13 +138,14 @@ overview.index=Index
 overview.index.refreshMenu=Refresh Menu
 overview.index.root=Domains
 overview.detail=Detail
-overview.detail.incomingDomains=incoming Domains
-overview.detail.outgoingDomains=outgoing Domains
-overview.detail.recrawl=Recrawl
 overview.detail.tab.main=Main
 overview.detail.tab.links=Links
 overview.detail.tab.content=Content
 overview.detail.tab.analysis=Analysis
+overview.detail.incomingDomains=incoming Domains
+overview.detail.outgoingDomains=outgoing Domains
+overview.detail.recrawl=Recrawl
+overview.detail.launchAnalysis=Launch the content analysis
 overview.refreshDetail.display=Display pages :
 overview.refreshDetail.crawled=crawled and ok
 overview.refreshDetail.error=error
