--- a/src/org/mfcrawler/resources/MessagesBundle.properties
+++ b/src/org/mfcrawler/resources/MessagesBundle.properties
@@ -146,6 +146,10 @@ overview.detail.incomingDomains=incoming Domains
 overview.detail.outgoingDomains=outgoing Domains
 overview.detail.recrawl=Recrawl
 overview.detail.launchAnalysis=Launch the content analysis
+overview.detail.analysis.word=Word
+overview.detail.analysis.occurrence=Occurrence
+overview.detail.analysis.weight=Weight
+overview.detail.analysis.calculatedScore=Calculated score
 overview.refreshDetail.display=Display pages :
 overview.refreshDetail.crawled=crawled and ok
 overview.refreshDetail.error=error
