Refactor load and save filters (keyword list and blacklist domains) and import and export on the filters panel

--- a/src/org/mfcrawler/resources/MessagesBundle.properties
+++ b/src/org/mfcrawler/resources/MessagesBundle.properties
@@ -104,7 +104,9 @@ export.fileFilters.csv.description=Comma-separated values (*.csv)
 
 filters.title=Filters
 filters.description=Configure keywords and site blacklist
+filters.import=Import
 filters.apply=Apply Filters
+filters.export=Export
 filters.keywords=Keywords
 filters.keywords.keyword=Keyword :
 filters.keywords.weight=Weight :
