--- a/src/org/mfcrawler/resources/MessagesBundle.properties
+++ b/src/org/mfcrawler/resources/MessagesBundle.properties
@@ -69,7 +69,7 @@ loading.recalculateScores.step1=Recalculate scores : 1/3
 loading.recalculateScores.step2=Recalculate scores : 2/3
 loading.recalculateScores.step3=Recalculate scores : 3/3
 loading.clearProject=Clear database of current project
-loading.export=Export results to a file
+loading.export=Export results into a file
 
 crawlThread.wait=Waiting
 crawlThread.load=Loading page : 
@@ -110,7 +110,7 @@ filters.export=Export
 filters.keywords=Keywords
 filters.keywords.keyword=Keyword :
 filters.keywords.weight=Weight :
-filters.blacklist=Site blacklist
+filters.blacklist=Blacklisted sites
 filters.blacklist.site=Site to blacklist :
 
 monitoring.title=Monitoring
@@ -119,7 +119,7 @@ monitoring.crawlConfig=Crawl configuration
 monitoring.crawlConfig.threadNumber=Thread number :
 monitoring.crawlConfig.innerDeep=Inner deep :
 monitoring.crawlConfig.outerDeep=Outer deep :
-monitoring.crawlConfig.crawlNumber=Crawl number remaining :
+monitoring.crawlConfig.crawlNumber=Crawl remaining number :
 monitoring.crawlConfig.minimumScore=Minimum score :
 monitoring.crawlConfig.crawlDelay=Default crawl delay (in ms) :
 monitoring.crawlConfig.forceCrawl=Force crawl despite robots.txt :
