Add a score column to content analysis table for pages

--- a/src/org/mfcrawler/resources/MessagesBundle.properties
+++ b/src/org/mfcrawler/resources/MessagesBundle.properties
@@ -151,6 +151,7 @@ overview.detail.launchAnalysis=Launch the content analysis
 overview.detail.analysis.word=Word
 overview.detail.analysis.occurrence=Occurrence
 overview.detail.analysis.weight=Weight
+overview.detail.analysis.score=Score
 overview.refreshDetail.display=Display pages :
 overview.refreshDetail.crawled=crawled and ok
 overview.refreshDetail.error=error
