--- a/src/org/mfcrawler/resources/MessagesBundle.properties
+++ b/src/org/mfcrawler/resources/MessagesBundle.properties
@@ -69,6 +69,7 @@ loading.recalculateScores.step1=Recalculate scores : 1/3
 loading.recalculateScores.step2=Recalculate scores : 2/3
 loading.recalculateScores.step3=Recalculate scores : 3/3
 loading.clearProject=Clear database of current project
+loading.analyze=Analyze contents
 loading.export=Export results into a file
 
 crawlThread.wait=Waiting
