Correct some bugs and adapt some parameters

--- a/src/org/mfcrawler/resources/MessagesBundle.properties
+++ b/src/org/mfcrawler/resources/MessagesBundle.properties
@@ -1,5 +1,5 @@
 window.title=MfCrawler
-window.about=Mini Focused Crawler v0.8\nCopyright (C) 2013  lbertelo\nGNU General Public License v3
+window.about=Mini Focused Crawler v0.9\nCopyright (C) 2013  lbertelo\nGNU General Public License v3
 window.closingWarning=The crawl must be stopped before closing the application
 general.ok=OK
 general.cancel=Cancel
@@ -184,7 +184,7 @@ overview.pageDetail.crawlTime=crawl time
 overview.pageDetail.crawlError=crawl error
 overview.pageDetail.resume=resume
 overview.pageDetail.links=links
-overview.pageDetail.linkNonCrawled= (non-crawled)
+overview.pageDetail.linkNonCrawled=(nc)
 overview.pageDetail.recrawlDialog=Are you sure you want to recrawl the page?
 overview.siteDetail.domain=domain
 overview.siteDetail.minOuterDeep=outer Deep
