Save and display the title of crawled pages.

--- a/src/org/mfcrawler/resources/MessagesBundle.properties
+++ b/src/org/mfcrawler/resources/MessagesBundle.properties
@@ -176,6 +176,7 @@ overview.refreshDetail.resultSitesNumber=Number of sites :
 overview.refreshDetail.resultPagesNumber=Number of pages :
 overview.pageDetail.local=== Local ==
 overview.pageDetail.path=path
+overview.pageDetail.title=title
 overview.pageDetail.allowCrawl=allow crawl
 overview.pageDetail.score=score
 overview.pageDetail.innerDeep=inner deep
