The cache size of the database management system can now be adjusted in the General Configuration Dialog.

--- a/src/org/mfcrawler/resources/MessagesBundle.properties
+++ b/src/org/mfcrawler/resources/MessagesBundle.properties
@@ -33,10 +33,13 @@ dialog.startingPages=Manage starting pages
 dialog.startingPages.loadFromFile=Load from file
 
 dialog.applicationConfig=General configuration
-dialog.applicationConfig.userAgent=user agent : 
-dialog.applicationConfig.pageRequestTimeout=page request timeout :
-dialog.applicationConfig.robotsRequestTimeout=robots.txt request timeout :
+dialog.applicationConfig.userAgent=user agent :
+dialog.applicationConfig.cacheSizeOfDbms=cache size of DBMS (in ko) :
+dialog.applicationConfig.pageRequestTimeout=page request timeout (in ms) :
+dialog.applicationConfig.robotsRequestTimeout=robots.txt request timeout (in ms) :
 dialog.applicationConfig.forbiddenFileExtensions=forbidden file extensions :
+dialog.applicationConfig.applyTitle=General configuration : Information
+dialog.applicationConfig.applyMessage=Restart the application for the support of the new configuration
 
 dialog.newProject=New project
 dialog.newProject.projectName=Choose a name for your project :
