Refactors the enumeration for sorting the display of pages (and sites) and Adds "total score" to it

--- a/src/org/mfcrawler/resources/MessagesBundle.properties
+++ b/src/org/mfcrawler/resources/MessagesBundle.properties
@@ -17,6 +17,12 @@ general.theProject=The project
 general.robotPath.allow=allow : 
 general.robotPath.disallow=disallow :
 
+model.ePageOrder.name=name
+model.ePageOrder.totalScore=total score
+model.ePageOrder.avgScore=average score
+model.ePageOrder.deep=deep
+model.ePageOrder.crawlTime=crawl time
+
 dialog.error=Error
 dialog.warning=Warning
 dialog.information=Information
@@ -171,10 +177,6 @@ overview.refreshDetail.error=error
 overview.refreshDetail.redirectPage=redirect page
 overview.refreshDetail.justFound=just found
 overview.refreshDetail.order=Order by :
-overview.refreshDetail.name=name
-overview.refreshDetail.score=score
-overview.refreshDetail.deep=deep
-overview.refreshDetail.crawlTime=crawl time
 overview.refreshDetail.resultSitesNumber=Number of sites :
 overview.refreshDetail.resultPagesNumber=Number of pages :
 overview.pageDetail.local=== Local ==
