Prepares the 1.1 release

--- a/src/org/mfcrawler/resources/MessagesBundle.properties
+++ b/src/org/mfcrawler/resources/MessagesBundle.properties
@@ -1,5 +1,5 @@
 window.title=MfCrawler
-window.about=Mini Focused Crawler v1.0\nCopyright (C) 2013  lbertelo\nGNU General Public License v3
+window.about=Mini Focused Crawler v1.1\nCopyright (C) 2013-2014  lbertelo\nGNU General Public License v3
 window.closingWarning=The crawl must be stopped before closing the application
 general.ok=OK
 general.cancel=Cancel
